# race-mcp

./: README.md  index.html  pyproject.toml  requirements.txt  start_mcp_with_ai.sh  start_server.sh  test_client.py
src/race_mcp_server/: __init__.py  __main__.py  callback_dispatcher.py  event_handler.py  gui.py  iracing_telemetry.py  main.py  mock_iracing_stream.py  openai_client.py  telemetry_processor.py  voice_interface.py
tests/: test_event_handler.py  test_iracing_telemetry.py  test_openai_client.py
